force-app/main/default/objects/EmailInclusionRule__c/EmailInclusionRule__c.object-meta.xml
<CustomObject>
    <description>A rule attached to a contact expressing preferences about emails that they receive</description>
    <label>Email inclusion rule</label>
    <nameField>
        <displayFormat>EIR-{00000}</displayFormat>
        <label>Email inclusion rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email inclusion rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>