force-app/main/default/objects/EmailInclusionRule__c/fields/AdditionalInclusion__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInclusion__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The third party contact who should be included on any email sent to the recipient</description>
    <inlineHelpText>The third party contact who should be included on any email sent to the recipient</inlineHelpText>
    <label>Additional inclusion</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Email inclusion rules (Additional inclusion)</relationshipLabel>
    <relationshipName>EmailInclusionRulesThirdParty</relationshipName>
    <type>Lookup</type>
</CustomField>