force-app/main/default/objects/EmailInclusionRule__c/fields/AdditionalRecipient__c.field-meta.xml
<CustomField>
    <fullName>AdditionalRecipient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The third party contact who should be included on any email sent to the main recipient.</description>
    <inlineHelpText>The third party contact who should be included on any email sent to the main recipient.</inlineHelpText>
    <label>Additional recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Email inclusion rules (Additional inclusion)</relationshipLabel>
    <relationshipName>EmailInclusionRulesAdditionalRecipient</relationshipName>
    <type>Lookup</type>
</CustomField>