force-app/main/default/objects/EmailInclusionRule__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The household to which the email inclusion rule applies.</description>
    <inlineHelpText>The household to which the email inclusion rule applies.</inlineHelpText>
    <label>Household</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must be a household</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>IndustriesHousehold</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Email inclusion rules</relationshipLabel>
    <relationshipName>EmailInclusionRulesHousehold</relationshipName>
    <type>Lookup</type>
</CustomField>