force-app/main/default/objects/EmailInclusionRule__c/fields/InclusionType__c.field-meta.xml
<CustomField>
    <fullName>InclusionType__c</fullName>
    <description>Indicates how this third party should be included on emails</description>
    <inlineHelpText>Indicates how this third party should be included on emails</inlineHelpText>
    <label>Inclusion type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>