force-app/main/default/objects/EmailInclusionRule__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures whether this email inclusion rule is active or not. If not active, the rule will not run.</description>
    <inlineHelpText>If active, this rule will run for all outbound emails.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>