force-app/main/default/objects/EmailInclusionRule__c/fields/MainRecipient__c.field-meta.xml
<CustomField>
    <fullName>MainRecipient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The person who, when addressed, will trigger the firing of the email inclusion rule. The person must be a core member of the household this rule relates to.</description>
    <inlineHelpText>The person who, when addressed, will trigger the firing of the email inclusion rule. The person must be a core member of the household this rule relates to.</inlineHelpText>
    <label>Main recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Email inclusion rules</relationshipLabel>
    <relationshipName>EmailInclusionRulesCoreRecipient</relationshipName>
    <type>Lookup</type>
</CustomField>