force-app/main/default/objects/EmailInclusionRule__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The person who is getting an email</description>
    <inlineHelpText>The person who is getting an email</inlineHelpText>
    <label>Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Email inclusion rules</relationshipLabel>
    <relationshipName>EmailInclusionRules</relationshipName>
    <type>Lookup</type>
</CustomField>