force-app/main/default/objects/EmailInclusionRule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Household__c</columns>
    <columns>Recipient__c</columns>
    <columns>AdditionalInclusion__c</columns>
    <columns>InclusionType__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>